--- a/packages/widget/src/index.css
+++ b/packages/widget/src/index.css
@@ -1,69 +1,36 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#poke-team-stream {
+  position: absolute;
+  inset: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.row {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  width: 100%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.container-outer {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container-inner {
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+img {
+  object-fit: contain;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.pixelated {
+  image-rendering: optimizeSpeed;              /* STOP SMOOTHING, GIVE ME SPEED  */
+  image-rendering: -moz-crisp-edges;           /* Firefox                        */
+  image-rendering: -o-crisp-edges;             /* Opera                          */
+  image-rendering: -webkit-optimize-contrast;  /* Chrome (and eventually Safari) */
+  image-rendering: pixelated;                  /* Universal support since 2021   */
+  image-rendering: optimize-contrast;          /* CSS3 Proposed                  */
+  -ms-interpolation-mode: nearest-neighbor;    /* IE8+                           */
 }
