--- a/packages/widget/src/index.css
+++ b/packages/widget/src/index.css
@@ -1,6 +1,10 @@
 #poke-team-stream {
   position: absolute;
   inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .row {
