--- a/packages/widget/src/index.css
+++ b/packages/widget/src/index.css
@@ -23,6 +23,10 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 img {
